--- a/Electron/2-Markdown_Txt_Editor/app/style.css
+++ b/Electron/2-Markdown_Txt_Editor/app/style.css
@@ -64,3 +64,11 @@ border: 5px solid rgb(238, 252, 250);;
 background-color: rgb(238, 252, 250);
 font-family: monospace;
 }
+.raw_markdown.drag-over {
+background-color: rgb(181, 220, 216);
+border-color: rgb(75, 160, 151);
+}
+.raw_markdown.drag-error {
+background-color: rgba(170, 57, 57,1);
+border-color: rgba(255,170,170,1);
+}
